// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a field with error 1`] = `
<StyledComponent
  error={true}
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "WrappedComponent": [Function],
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  font-size: 1em;
  margin-bottom: 10px;
  ",
          [Function],
          ";
  border-radius: 0.3rem;
  height: 2em;
  padding: 0.5em;

  &:focus {
    border-color: #6c3b91;
  }
",
        ],
      },
      "displayName": "Styled(C)",
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    }
  }
  forwardedRef={null}
  name="password"
  placeholder="Password"
  type="password"
/>
`;

exports[`Button renders a field without error 1`] = `
<StyledComponent
  error={false}
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "WrappedComponent": [Function],
      "attrs": undefined,
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  font-size: 1em;
  margin-bottom: 10px;
  ",
          [Function],
          ";
  border-radius: 0.3rem;
  height: 2em;
  padding: 0.5em;

  &:focus {
    border-color: #6c3b91;
  }
",
        ],
      },
      "displayName": "Styled(C)",
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    }
  }
  forwardedRef={null}
  name="password"
  placeholder="Password"
  type="password"
/>
`;
